fix/add webpage links

--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
           <ul class="list-unstyled">
             <li><a href="http://aktemur.github.io/">Barış Aktemur</a>,
               Ozyegin University, Turkey</li>
-            <li><a href="http://namin.org/">Nada Amin</a>
-              <b>(general chair)</b></li>
-            <li>Kenichi Asai,
+            <li><a href="http://namin.net">Nada Amin</a>
+              <b>(general chair)</b>,
+              EPFL, Switzerland</li>
+            <li><a href="http://pllab.is.ocha.ac.jp/~asai">Kenichi Asai</a>,
               Ochanomizu University, Japan</li>
             <li>Eli Barzilay,
               Microsoft, USA</li>
