--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </dl>
               <h3>Important Links</h3>
               <ul class="list-unstyled">
-                <li>(TBD) Submission Page</li>
+                <li><a href="https://easychair.org/conferences/?conf=scheme17">Submission Page</a></li>
                 <li>(TBD) Registration Page</li>
                 <li><a href="http://www.twitter.com/schemeworkshop/">@schemeworkshop</a></li>
               </ul>
@@ -108,6 +108,10 @@
           <div class="page-header">
             <h2>Submission Information</h2>
           </div>
+
+          <p>Please submit papers and demonstration proposals to our
+            <a href="https://easychair.org/conferences/?conf=scheme17">Submission Page</a>.
+          </p>
 
           <p>Paper submissions must be in
             <tt>acmart</tt> format, <tt>sigplan</tt> sub-format,
