Add missing PC member webpages

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
               EPFL, Switzerland</li>
             <li><a href="http://pllab.is.ocha.ac.jp/~asai">Kenichi Asai</a>,
               Ochanomizu University, Japan</li>
-            <li>Eli Barzilay,
+            <li><a href="http://www.barzilay.org/">Eli Barzilay</a>,
               Microsoft, USA</li>
-            <li>Felix S Klock II,
+            <li><a href=" http://pnkfx.org/pnkfelix/">Felix S Klock II</a>,
               Mozilla Research, USA</li>
             <li><a href="http://jeapostrophe.github.io/home/">Jay McCarthy</a>,
               University of Massachusetts Lowell, USA</li>
