Tweaks after proofreading by jeapostrophe

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             the Algorithmic Language Scheme:
             universality through minimalism,
             adequation through self-improvement,
-            flexibility through rigorous design,
+            flexibility through rigorous design, and
             composability through orthogonal features.
           </p>
 
@@ -155,8 +155,8 @@
             <a href="https://easychair.org/conferences/?conf=scheme17">Submission Page</a>.
           </p>
 
-          <p><em>[NEW IN 2017!]</em> <b>Paper submissions must use the
-              <tt>acmart</tt> format, <tt>acmlarge</tt> sub-format</b>.
+          <p><em>[NEW IN 2017!]</em> <b>Paper submissions must use
+              the format <tt>acmart</tt> and its sub-format <tt>acmlarge</tt></b>.
             They must be in PDF, printable in black and white on US Letter size.
             Microsoft Word and LaTeX templates for this format are available at:
           </p>
