Fix typo seen by aktemur, and tweak a sentence

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             switching from their traditional two-column formats
             (e.g. <tt>sigplanconf</tt>) to the above.
             While a two-column format with small fonts
-            is much more practical when printing and reading papers,
+            is much more practical when reading printed papers,
             the single-column format with large fonts
             is nicer to view on a computer screen,
             as most <q>papers</q> are read these days.
@@ -205,7 +205,7 @@
           </p>
           <p>
             Authors are encouraged to publish any code associated to their
-            papers under a open source license, so that
+            papers under an open source license, so that
             reviewers may try the code and verify the claims.
           </p>
 
