More human factors

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             <li><em>Formal semantics</em>:
               Theory, analyses and transformations, partial evaluation</li>
             <li><em>Human Factors</em>:
-              History, evolution, sociology of Scheme
-              and its standardization</li>
+              Past, present and future history, evolution and sociology
+              of the language Scheme, its standard and its dialects</li>
             <li><em>Education</em>:
               approaches, experiences, curricula</li>
             <li><em>Applications</em>:
