--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               in a 40 minute slot including Q&amp;A.
             </li>
             <li>
-              <b>Experience Reports</b>, with a limit to 12 pages,
+              <b>Experience Reports</b>, with a limit to 12 pages.
               Each accepted report will be presented by its authors
               in a 20 minute slot including Q&amp;A.
             </li>
