Indicate IU to publish proceedings as TR

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             reviewers may try the code and verify the claims.
           </p>
 
-          <p>Proceedings will be printed as a University Technical Report.
+          <p>Proceedings will be printed as a Technical Report at Indiana University.
           </p>
 
           <p>Publication of a paper at this workshop is not intended
