Fixed link to ICFP
the previous link was kind of dead

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1>Scheme and Functional Programming Workshop 2017</h1>
           <p class="lead">Oxford, United Kingdom</p>
 
-          <p class="lead">Co-located with <a href="http://www.icfpconference.org/icfp2017/index.html">ICFP 2017</a></p>
+          <p class="lead">Co-located with <a href="http://conf.researchr.org/home/icfp-2017">ICFP 2017</a></p>
         </div>
       </div>
       <div class="row">
