Extend deadlines, update namin&fare affiliations

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             <div class="col-md-6">
               <h3>Important Dates</h3>
               <dl class="dl-horizontal">
-                <dt>Submission deadline</dt>
-                <dd>May 26th, 2017 <a href="https://en.wikipedia.org/wiki/Anywhere_on_Earth">(AoE)</a></dd>
-                <dt>Author notification</dt>
-                <dd>June 27th, 2017 <a href="https://en.wikipedia.org/wiki/Anywhere_on_Earth">(AoE)</a></dd>
-                <dt>Camera-ready deadline</dt>
-                <dd>July 28th, 2017 <a href="https://en.wikipedia.org/wiki/Anywhere_on_Earth">(AoE)</a></dd>
+                <dt>Submission deadline (extended)</dt>
+                <dd>June 16th, 2017 <a href="https://en.wikipedia.org/wiki/Anywhere_on_Earth">(AoE)</a></dd>
+                <dt>Author notification (extended)</dt>
+                <dd>July 18th, 2017 <a href="https://en.wikipedia.org/wiki/Anywhere_on_Earth">(AoE)</a></dd>
+                <dt>Camera-ready deadline (extended)</dt>
+                <dd>August 18th, 2017 <a href="https://en.wikipedia.org/wiki/Anywhere_on_Earth">(AoE)</a></dd>
                 <dt>Workshop</dt>
                 <dd>September 3rd, 2017</dd>
               </dl>
@@ -64,7 +64,7 @@
               <ul class="list-unstyled">
                 <li><a href="https://easychair.org/conferences/?conf=scheme17">Submission Page</a></li>
                 <li>(TBD) Registration Page</li>
-                <li><a href="http://www.twitter.com/schemeworkshop/">@schemeworkshop</a></li>
+                <li>Twitter feed: <a href="http://www.twitter.com/schemeworkshop/">@schemeworkshop</a></li>
               </ul>
             </div>
             <div class="col-md-6">
@@ -235,7 +235,7 @@
               Ozyegin University, Turkey</li>
             <li><a href="http://namin.net">Nada Amin</a>
               <b>(general chair)</b>,
-              EPFL, Switzerland</li>
+              University of Cambridge, UK</li>
             <li><a href="http://pllab.is.ocha.ac.jp/~asai">Kenichi Asai</a>,
               Ochanomizu University, Japan</li>
             <li><a href="http://www.barzilay.org/">Eli Barzilay</a>,
@@ -248,7 +248,7 @@
               Professor emeritus at Sorbonne University, France</li>
             <li><a href="https://ngnghm.github.io/">François-René Rideau</a>
               <b>(program chair)</b>,
-              Bridgewater Associates, USA</li>
+              Metaphor, USA</li>
           </ul>
         </div>
         <div class="col-md-6">
