Announce SamTH as keynote speaker. Registration page.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h3>Important Links</h3>
               <ul class="list-unstyled">
                 <li><a href="https://easychair.org/conferences/?conf=scheme17">Submission Page</a></li>
-                <li>(TBD) Registration Page</li>
+                <li><a href="http://icfp17.sigplan.org/attending/registration">Registration Page</a></li>
                 <li>Twitter feed: <a href="http://www.twitter.com/schemeworkshop/">@schemeworkshop</a></li>
               </ul>
             </div>
@@ -91,6 +91,18 @@
             adequation through self-improvement,
             flexibility through rigorous design, and
             composability through orthogonal features.
+          </p>
+
+          <div class="page-header">
+            <h2>Program</h2>
+          </div>
+          <ul>
+            <li>Keynote: Sam Tobin-Hochstadt
+            </li>
+            <li>Program being finalized...
+            </li>
+          </ul>
+          <p>
           </p>
 
           <div class="page-header">
