--- a/index.html
+++ b/index.html
@@ -97,13 +97,46 @@
             <h2>Program</h2>
           </div>
           <ul>
-            <li>Keynote: Sam Tobin-Hochstadt
+            <li>09:00-09:10 Welcome
             </li>
-            <li>Program being finalized...
+            <li>09:10-10:10 Keynote: <em>Sam Tobin-Hochstadt</em>
+            </li>
+            <li>10:10-10:30 Break 1
+            </li>
+            <li>10:30-11:15 Paper presentation: <em>Satoshi Egi</em>,
+              Scalar and Tensor Parameters for Importing Tensor Index Notation
+              including Einstein Summation Notation
+            </li>
+            <li>11:15-11:30 Lightning Talk: <em>Joseph Corneli and Raymond Puzio</em>,
+              Extending the LISP model: from cons cells to triples, from trees to hypergraphs
+            </li>
+            <li>11:20-12:00 Break 2
+            </li>
+            <li>12:00-12:30 Panel on Scheme in 2017 (TBD)
+            </li>
+            <li>12:30-14:00 Lunch
+            </li>
+            <li>14:00-14:45 Paper presentation: <em>Thomas Gilray and Sidharth Kumar</em>,
+              Toward Parallelizing Control-flow Analysis with Datalog
+            </li>
+            <li>14:45-15:00 Lightning Talk: <em>Dimitris Vyzovitis</em>,
+              Gerbil on Gambit, as they say Racket on Chez
+            </li>
+            <li>14:50-15:30 Break 3
+            </li>
+            <li>15:30-16:15 Report: <em>Alaric Snell-Pym</em>,
+              Status of the ongoing R7RS standardization process
+            </li>
+            <li>16:15-16:30 Lightning Talk: <em>Alain Marty</em>,
+              {lambda talk}
+            </li>
+            <li>16:30-16:50 Break 4
+            </li>
+            <li>16:50-17:40 Closing Presentation: <em>(Speaker TBD)</em>
+            </li>
+            <li>17:40-17:50 Goodbye</em>
             </li>
           </ul>
-          <p>
-          </p>
 
           <div class="page-header">
             <h2>Call For Papers</h2>
