Invited Speaker: Matt Might

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </li>
             <li>16:30-16:50 Break 4
             </li>
-            <li>16:50-17:40 Invited Talk: <em>(Speaker TBD)</em>
+            <li>16:50-17:40 Invited Talk: <b>Matthew Might</b>
             </li>
             <li>17:40-17:50 Goodbye
             </li>
