--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </li>
             <li>11:30-12:00 Break 2
             </li>
-            <li>12:00-12:30 Panel on Scheme in 2017 (TBD)
+            <li>12:00-12:30 Panel on Future of Scheme, <b>François-René Rideau, Marc Feeley, Arthur Gleckler, Kathy Gray, Alaric Snell-Pym, Andy Wingo</b>
             </li>
             <li>12:30-14:00 Lunch
             </li>
