--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             </li>
             <li>10:30-11:15 Paper Presentation: <b>Satoshi Egi</b>,
               <cite>Scalar and Tensor Parameters for Importing Tensor Index Notation
-              including Einstein Summation Notation</cite>
+                including Einstein Summation Notation</cite>
+              <a href="Scheme17_egi.pdf">[PDF]</a>
             </li>
             <li>11:15-11:30 Lightning Talk: <b>Joseph Corneli and Raymond Puzio</b>,
               <cite>Extending the LISP model
@@ -120,6 +121,7 @@
             </li>
             <li>14:00-14:45 Paper Presentation: <b>Thomas Gilray and Sidharth Kumar</b>,
               <cite>Toward Parallelizing Control-flow Analysis with Datalog</cite>
+              <a href="Scheme17_gilray_kumar.pdf">[PDF]</a>
             </li>
             <li>14:45-15:00 Lightning Talk: <b>Dimitris Vyzovitis</b>,
               <cite>Gerbil on Gambit, as they say Racket on Chez</cite>
