--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               <h3>Important Links</h3>
               <ul class="list-unstyled">
 		<li><a href="https://www.youtube.com/playlist?list=PLnqUlCo055hWAwdO0V0lCBGfgL-3fFgvV">Videos of Talks</a></li>
+		<li><a href="http://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-919.html">Informal Proceedings</a></li>
                 <li><a href="https://easychair.org/conferences/?conf=scheme17">Submission Page</a></li>
                 <li><a href="http://icfp17.sigplan.org/attending/registration">Registration Page</a></li>
                 <li>Twitter feed: <a href="http://www.twitter.com/schemeworkshop/">@schemeworkshop</a></li>
